--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 remote_theme: just-the-docs/just-the-docs
-title: Protobject Framework
-description: A complete guide to Protobject Framework
+title: InfoVis PUC
+description: La pagina web del curso de InfoVis PUC
 logo: "/assets/images/logo.svg"
